# keycard-osx-oidc

./: ADMIN.md  Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/oidc-core/: Cargo.toml
crates/oidc-core/src/: b64.rs  claims.rs  discovery.rs  error.rs  jwk.rs  jwt.rs  lib.rs  protocol.rs
crates/oidcd/: Cargo.toml
crates/oidcd/src/: config.rs  discovery.rs  identity.rs  keystore.rs  main.rs  state.rs  uds.rs
crates/oidcd/tests/: e2e.rs
examples/python-whoami/: README.md  pyproject.toml
examples/python-whoami/src/keycard_osx_oidc_demo/: __init__.py  app.py  client.py  keycard.py
packaging/: config.example.toml  install.sh  uninstall.sh
packaging/launchd/: com.keycard.osx-oidcd.plist
