[package]
name = "keycard-osx-oidcd"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Privileged macOS daemon that mints OIDC JWTs and serves discovery"

[[bin]]
name = "keycard-osx-oidcd"
path = "src/main.rs"

[dependencies]
oidc-core = { path = "../oidc-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
hyper = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
time = { workspace = true }
libc = { workspace = true }
hyper-util = { workspace = true }

[dev-dependencies]
tempfile = "3"
tower = { workspace = true, features = ["util"] }
ureq = { version = "2", features = ["json"] }
base64 = { workspace = true }
