[project]
name = "keycard-osx-oidc-demo"
version = "0.1.0"
description = "Example Python app that mints its identity JWT by talking to keycard-osx-oidcd over its Unix socket."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "keycardai-oauth>=0.10.0",
]

[project.scripts]
keycard-demo = "keycard_osx_oidc_demo.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/keycard_osx_oidc_demo"]

[tool.uv]
dev-dependencies = []
